Main.java: Specify a password to decrypt PDFs with -p.

--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,7 @@
       <zipfileset src="${lib.dir}/pdfbox-1.1.0.jar" excludes="META-INF"/>
       <zipfileset src="${lib.dir}/fontbox-1.1.0.jar" excludes="META-INF"/>
       <zipfileset src="${lib.dir}/commons-logging-1.1.1.jar" excludes="META-INF"/>
+      <zipfileset src="${lib.dir}/args4j-2.0.11.jar" excludes="META-INF"/>
       <manifest>
         <attribute name="Main-Class" 
                    value="org.crossref.pdf2xml.Main"/>
