--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/pdfbox-1.1.0.jar" sourcepath="lib/pdfbox-1.1.0-src.zip"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/fontbox-1.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/args4j-2.0.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
